--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,4 @@
 {
-    "presets": [
-      "es2015",
-      "react"
-    ],
-    "plugins": ["transform-class-properties",["import", {
-      "libraryName": "antd",
-      "libraryDirectory": "es",
-      "style": "css"
-    }]]
-  }
+  "presets": ["@babel/preset-env", "@babel/react"],
+  "plugins": ["@babel/plugin-transform-runtime"]
+}
