--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,19 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "commonjs",
     "target": "es6",
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "extends": ["tslint:recommended", "tslint-react"],
   "rules": {},
   "include": ["./src/**/*"]
 }
