--- a/package.json
+++ b/package.json
@@ -5,23 +5,39 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server",
-    "build": "webpack"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.build.js",
+    "dll": "cross-env NODE_ENV=production webpack --config webpack.dll.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/preset-react": "^7.0.0",
-    "@types/react-dom": "^16.8.3",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
     "antd": "^3.13.6",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^2.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^3.0.1",
+    "html-webpack-include-assets-plugin": "^1.0.7",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
+    "terser-webpack-plugin": "^1.2.3",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack-dev-server": "^3.2.1"
   },
   "devDependencies": {
@@ -30,14 +46,20 @@
     "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/react": "^16.8.12",
+    "@types/react-dom": "^16.8.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^7.1.5",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
+    "copy-webpack-plugin": "^5.0.2",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "postcss-loader": "^3.0.0",
     "redux-devtools": "^3.5.0",
     "source-map-loader": "^0.2.4",
@@ -46,6 +68,8 @@
     "tslint": "^5.15.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.4.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3"
   }
